--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,8 +221,8 @@ jobs:
             npm install
             npm audit fix
             # Run and save the migration output
+            cat .env
             npm run migrations > migrations_dump.txt
-            cat migrations_dump.txt
       - run:
           name: Send migration status to kvdb
           command: |
