--- a/backend/.env
+++ b/backend/.env
@@ -6,8 +6,8 @@ TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
 TYPEORM_MIGRATIONS=./src/migrations/*.ts
 
 # Use these values for the local PG database from the Docker Compose file
-TYPEORM_HOST=udapeopol-rds-postgresql.clp1sgrnvves.us-east-1.rds.amazonaws.com
+TYPEORM_HOST=database-1.c2xkwvuybtpn.us-east-1.rds.amazonaws.com
 TYPEORM_PORT=5432
 TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=postgres
-TYPEORM_DATABASE=udapeopol-rds-postgresql
+TYPEORM_DATABASE=database-1
