--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -363,7 +363,8 @@ workflows:
      #         only: [master]
      # - configure-infrastructure:
      #     requires: [deploy-infrastructure]
-      - run-migrations:
+      - run-migrations
+      #- run-migrations:
       #    requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
