--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,26 +18,27 @@ commands:
             aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
             aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
 
-  revert-migrations:
-    description: Revert the last migration
-    parameters:
-      workflow_id:
-        type: string      
-    steps:
-      - run:
-        name: Revert migrations
-        when: on_fail
-        command: |
-          # Your Memstash or kvdb.io GET URL code goes here
-          # Example: kvdb.io
-          SUCCESS=$(curl --insecure  https://kvdb.io/FSEfNb8pmLiuvp867pkneM/migration_<< parameters.workflow_id >>)
-          # Logic for reverting the database state
-          if (( $SUCCESS == 1 ));
-          then
-            cd ~/project/backend
-            npm install
-            npm run migration:revert
-          fi
+    revert-migrations:
+      description: Revert the last migration
+      parameters:
+          workflow_id:
+              type: string   
+              default: ${CIRCLE_WORKFLOW_ID:0:7}
+      steps:
+          - run:
+              name: Revert migrations
+              when: on_fail
+              command: |
+                  # Your Memstash or kvdb.io GET URL code goes here
+                  # Example: kvdb.io
+                  SUCCESS=$(curl --insecure  https://kvdb.io/FSEfNb8pmLiuvp867pkneM/migration_<< parameters.workflow_id >>)
+                  # Logic for reverting the database state
+                  if (( $SUCCESS == 1 ));
+                  then
+                      cd ~/project/backend
+                      npm install
+                      npm run migration:revert
+                  fi 
             
 jobs:
   build-frontend:
