--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -236,26 +236,46 @@ jobs:
       # - destroy-environment:
       #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}     
 
-  # deploy-frontend:
-  #   docker:
-  #     # Docker image here that supports AWS CLI
-  #   steps:
-  #     # Checkout code from git
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           # your code here
-  #     - run:
-  #         name: Get backend url
-  #         command: |
-  #           # your code here
-  #           export API_URL="http://${BACKEND_IP}:3030"
-  #           echo "${API_URL}"
-  #     - run:
-  #         name: Deploy frontend objects
-  #         command: |
-  #           # your code here
-  #     # Here's where you will add some code to rollback on failure      
+  deploy-frontend:
+    docker:
+      # AWS CLI
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - attach_workspace:
+          at: /root
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update ansible 
+            apk add --update tar gzip curl
+            pip3 install awscli
+            curl -fsSL https://deb.nodesource.com/setup_14.x
+            apk add --update nodejs npm
+            node --version
+            npm --version
+      - run:
+          name: Get backend url
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query 'Reservations[*].Instances[*].PublicDnsName' \
+              --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+            npm install
+            npm run build
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      # rollback on failure
+      # - destroy-environment:
+      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}    
                     
   # deploy-backend:
   #   docker:
@@ -345,29 +365,28 @@ cleanup:
 workflows:
   default:
     jobs:
-     # - build-frontend
-     # - build-backend
-     # - test-frontend:
-     #     requires: [build-frontend]
-     # - test-backend:
-     #     requires: [build-backend]
-     # - scan-backend:
-     #     requires: [build-backend]
-     # - scan-frontend:
-     #     requires: [build-frontend]
-     # - notify: 
-     #     requires: [scan-frontend]
-     #     context: slack
-     # - deploy-infrastructure:
-     #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-     #     filters:
-     #       branches:
-     #         only: [master]
-     # - configure-infrastructure:
-     #     requires: [deploy-infrastructure]
-      - run-migrations
-      #- run-migrations:
-      #    requires: [configure-infrastructure]
+     - build-frontend
+     - build-backend
+     - test-frontend:
+         requires: [build-frontend]
+     - test-backend:
+         requires: [build-backend]
+     - scan-backend:
+         requires: [build-backend]
+     - scan-frontend:
+         requires: [build-frontend]
+     - notify: 
+         requires: [scan-frontend]
+         context: slack
+     - deploy-infrastructure:
+         requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+         filters:
+           branches:
+             only: [master]
+     - configure-infrastructure:
+         requires: [deploy-infrastructure]
+     - run-migrations:
+         requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
       # - deploy-backend:
