--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,6 +174,8 @@ jobs:
           root: ~/
           paths:
           - project/.circleci/ansible/inventory.txt
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   configure-infrastructure:
     docker:
@@ -210,6 +212,8 @@ jobs:
             cat ~/project/.circleci/ansible/inventory.txt
             export ANSIBLE_HOST_KEY_CHECKING=False
             ansible-playbook -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/configure-server.yml
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   run-migrations:
     docker:
@@ -232,9 +236,8 @@ jobs:
               # If you are using kvdb.io, generate the bucket ID "FSEfNb8pmLiuvp867pkneM" in your local terminal first
               curl --insecure https://kvdb.io/FSEfNb8pmLiuvp867pkneM/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
-      # rollback on failure
-      # - destroy-environment:
-      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}     
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}     
 
   deploy-frontend:
     docker:
@@ -273,7 +276,6 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      # rollback on failure
       # - destroy-environment:
       #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}    
                     
@@ -365,28 +367,29 @@ cleanup:
 workflows:
   default:
     jobs:
-     - build-frontend
-     - build-backend
-     - test-frontend:
-         requires: [build-frontend]
-     - test-backend:
-         requires: [build-backend]
-     - scan-backend:
-         requires: [build-backend]
-     - scan-frontend:
-         requires: [build-frontend]
-     - notify: 
-         requires: [scan-frontend]
-         context: slack
-     - deploy-infrastructure:
-         requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-         filters:
-           branches:
-             only: [master]
-     - configure-infrastructure:
-         requires: [deploy-infrastructure]
-     - run-migrations:
-         requires: [configure-infrastructure]
+    #  - build-frontend
+    #  - build-backend
+    #  - test-frontend:
+    #      requires: [build-frontend]
+    #  - test-backend:
+    #      requires: [build-backend]
+    #  - scan-backend:
+    #      requires: [build-backend]
+    #  - scan-frontend:
+    #      requires: [build-frontend]
+    #  - notify: 
+    #      requires: [scan-frontend]
+    #      context: slack
+    #  - deploy-infrastructure:
+    #      requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+    #      filters:
+    #        branches:
+    #          only: [master]
+    #  - configure-infrastructure:
+    #      requires: [deploy-infrastructure]
+    #  - run-migrations:
+    #      requires: [configure-infrastructure]
+    - deploy-frontend
       # - deploy-frontend:
       #     requires: [run-migrations]
       # - deploy-backend:
