--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -260,10 +260,11 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicDnsName' --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "API_URL = ${API_URL}"
-            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            BACKEND_IP=$( curl https://kvdb.io/FSEfNb8pmLiuvp867pkneM/backend_url )
+            echo $BACKEND_IP
+            echo "${BACKEND_IP}"
+            echo "NODE_ENV=production" >> frontend/.env
+            echo "API_URL=${BACKEND_IP}" >> frontend/.env
             cat frontend/.env
       - run:
           name: Deploy frontend objects
