--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -260,11 +260,14 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            BACKEND_IP=$( curl https://kvdb.io/FSEfNb8pmLiuvp867pkneM/backend_url )
-            echo $BACKEND_IP
-            echo "${BACKEND_IP}"
-            echo "NODE_ENV=production" >> frontend/.env
-            echo "API_URL=${BACKEND_IP}" >> frontend/.env
+            export BACKEND_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query 'Reservations[*].Instances[*].PublicDnsName' \
+              --output text)
+            echo "BACKEND_IP=${BACKEND_IP}"
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             cat frontend/.env
       - run:
           name: Deploy frontend objects
@@ -365,31 +368,30 @@ cleanup:
 workflows:
   default:
     jobs:
-    #  - build-frontend
-    #  - build-backend
-    #  - test-frontend:
-    #      requires: [build-frontend]
-    #  - test-backend:
-    #      requires: [build-backend]
-    #  - scan-backend:
-    #      requires: [build-backend]
-    #  - scan-frontend:
-    #      requires: [build-frontend]
-    #  - notify: 
-    #      requires: [scan-frontend]
-    #      context: slack
-    #  - deploy-infrastructure:
-    #      requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-    #      filters:
-    #        branches:
-    #          only: [master]
-    #  - configure-infrastructure:
-    #      requires: [deploy-infrastructure]
-    #  - run-migrations:
-    #      requires: [configure-infrastructure]
-    - deploy-frontend
-      # - deploy-frontend:
-      #     requires: [run-migrations]
+      - build-frontend
+      - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
+      - notify: 
+          requires: [scan-frontend]
+          context: slack
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [master]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
+      - deploy-frontend:
+          requires: [run-migrations]
       # - deploy-backend:
       #     requires: [run-migrations]
       # - smoke-test:
