--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -1,4 +1,6 @@
-- name: "configuration play." 
+---
+
+- name: "deployment play." 
   hosts: web
   remote_user: ubuntu
   become: true
@@ -9,25 +11,25 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
+  environment:
+    NODE_ENV: production
+    version: "1"
+    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
+    TYPEORM_MIGRATIONS_DIR: "./migrations"
+    TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
+    TYPEORM_MIGRATIONS: "./migrations/*.js"
+    TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
+    TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT')}}"
+    TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
+    TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
+    TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
   pre_tasks:
-    - name: wait 600 seconds for target connection to become reachable/usable
+    - name: "wait for connection reachability"
       wait_for_connection:
-      
-    - name: install python for Ansible.
+        timeout: 600
+    - name: "Install py for Ansible"
       become: true
       raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
       changed_when: false
-      
-    - name: Loading environment variables
-      tags: always
-      set_fact:
-        TYPEORM_CONNECTION: "{{ lookup('env','TYPEORM_CONNECTION') }}"
-        TYPEORM_HOST: "{{ lookup('env','TYPEORM_HOST') }}"
-        TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
-        TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
-        TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
-        TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
-        TYPEORM_MIGRATIONS: "{{ lookup('env','TYPEORM_MIGRATIONS') }}"
-        TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
   roles:
     - deploy
