--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,8 +209,8 @@ jobs:
             cat ~/project/.circleci/ansible/inventory.txt
             export ANSIBLE_HOST_KEY_CHECKING=False
             ansible-playbook -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/configure-server.yml
-      # - destroy-environment:
-      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   run-migrations:
     docker:
@@ -319,10 +319,10 @@ jobs:
                 echo "Contents  of the inventory.txt file is -------"
                 cat inventory.txt
                 ansible-playbook -i inventory.txt deploy-backend.yml
-          # - revert-migrations:
-          #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-          # - destroy-environment:
-          #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
+          - revert-migrations:
+              workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+          - destroy-environment:
+              workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
 
   smoke-test:
     docker:
@@ -343,7 +343,7 @@ jobs:
             if curl -s ${URL} | grep "Welcome"
             then
               # Change this to 0 after the job fails
-              return 0
+              return 1
             else
               return 1
             fi
@@ -364,7 +364,10 @@ jobs:
             else
               return 1
             fi
-      # Here's where you will add some code to rollback on failure  
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
 
   # cloudfront-update:
   #   docker:
