--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -364,25 +364,35 @@ jobs:
             else
               return 1
             fi
-      - revert-migrations:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
 
-  # cloudfront-update:
-  #   docker:
-  #     # Docker image here that supports AWS CLI
-  #   steps:
-  #     # Checkout code from git
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           # your code here
-  #     - run:
-  #         name: Update cloudfront distribution
-  #         command: |
-  #           # your code here
-  #     # Here's where you will add some code to rollback on failure
+  cloudfront-update:
+      docker:
+        - image: amazon/aws-cli
+      steps:
+        - checkout
+        - run:
+            name: clean old workflow
+            command: |
+              WorkflowID=$(aws cloudformation \
+              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text)
+              curl https://kvdb.io/FSEfNb8pmLiuvp867pkneM/values/workflowid  -d "$WorkflowID"
+        - run:
+            name: Update cloudfront 
+            command: |
+              aws cloudformation deploy \
+                --template-file .circleci/files/cloudfront.yml \
+                --tags project=circleci-${CIRCLE_WORKFLOW_ID:0:7} \
+                --stack-name "udapeople-front" \
+                --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
+        - revert-migrations:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+        - destroy-environment:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   notify:
     docker:
