--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -377,7 +377,7 @@ jobs:
         - run:
             name: clean old workflow
             command: |
-              WorkflowID=$(aws cloudformation \
+              WorkflowID=$(aws --region us-east-1 cloudformation \
               list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
               --no-paginate --output text)
               curl https://kvdb.io/FSEfNb8pmLiuvp867pkneM/values/workflowid  -d "$WorkflowID"
@@ -385,10 +385,10 @@ jobs:
             name: Update cloudfront 
             command: |
               aws cloudformation deploy \
-                --template-file .circleci/files/cloudfront.yml \
-                --tags project=circleci-${CIRCLE_WORKFLOW_ID:0:7} \
-                --stack-name "udapeople-front" \
-                --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
+              --template-file .circleci/files/cloudfront.yml \
+              --tags project=circleci-${CIRCLE_WORKFLOW_ID:0:7} \
+              --stack-name InitialStack \
+              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
         - revert-migrations:
             workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
         - destroy-environment:
